kube-manifest/overlays/staging/2048-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: game-2048
  name: game-2048
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game-2048
  template:
    metadata:
      labels:
        app: game-2048
    spec:
      containers:
      - image: iamzee007/docker-2048
        name: app-2048
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m
