kube-manifest/overlays/staging/tetris-svc-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris-service
spec:
  selector:
    app: game-tetris
